# SelfDrivingCar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  compiler.sh  edgeDetection.cpp  main.cpp
src/: LandeBasedDetection.cpp  LaneDetection.cpp  LaneDetection.h  MotorControl.cpp  MotorControl.h  compiler.sh  delayCheck.cpp  lineDetection.cpp  line_detection.cpp  main.cpp  multipleFiles.sh  trafficLight.cpp  zebraPatern.cpp
src/cascade/: cas_becareful.xml  cas_circle.xml  cas_forward.xml  cas_left.xml  cas_parking.xml  cas_right.xml  cascade.cpp
src/test/: IR_line_tracer.cpp  IR_sensor.cpp  SherzodbekTest.cpp  colorConversion.cpp  edgeDetection.cpp  lineDetection.cpp  motorControl.cpp  motorSpeedControl.cpp  trafficLight.cpp  ultrasonic.cpp  working_ir.cpp
src/test/hardware/: IR_line_tracer.cpp  IR_sensor.cpp  frameForSignal.cpp  motorControl.cpp  motorSpeedControl.cpp  ultrasonic.cpp  working_ir.cpp
src/test/hmw3/: task1.cpp
src/test/image processing/: colorConversion.cpp  edgeDetection.cpp  lineDetection.cpp  shapeDetection.cpp  trafficLight.cpp  zebraPatern.cpp
src/test/util/: delayCheck.cpp  imageAnalyse.cpp  line_detection.cpp  tangent_angle.cpp
